feat(706/686): owned parallel OCR engine (6.9x on scans) + first real-document eval corpus (#124)
## Summary

Four coupled deliverables from the 705 extraction-tax takeover (tempdocs
705/686/706/677):

- **706 — scanned-PDF OCR throughput**: Tika no longer spawns tesseract;
a single owned engine (`PdfOcrEngine`) does all PDF page OCR — parallel
workers, 300 DPI GRAY, one spawn/page emitting txt+tsv, in-loop page cap
(raised 50→200 on corpus evidence; the 30s budget with
partial-text-on-expiry is the cost bound) + forceful child-process
cleanup (fixes the advisory-timebox/orphaned-tesseract liveness class).
Measured 115.1s → 16.8s (6.9×) on the 77-page before/after doc and **~5×
corpus-level** (615/620 real docs in ~33 min vs 120 in 31 min);
independently review-hardened.
- **686 — real-document corpus + measurement**: first real
binary-document eval corpus (`mixed/realdocs-v1`, 620 files,
license-clean govdocs1+NapierOne, pinned sha256 manifest committed) +
jseval raw-binary dataset support. Two instrumented runs recorded: heap
verdict at `DEFAULT_WORKER_HEAP` (1g survives real parse pressure, no
margin) and the first real extraction distribution — **54% structured /
46% OCR-path, 19.7% VDU demand**.
- **SPLADE enrichment native-crash fix (worker-core)**: run 2 exposed a
reproducible JVM death (`EXCEPTION_UNCAUGHT_CXX_EXCEPTION` in
tokenizers.dll, heap 99.8% full) — `SpladeEncoder` batch-tokenized ~100
full documents upfront with truncation off (~1 GB short-lived
encodings). Fixed with char-budgeted tokenize groups; poison-document
and surrogate hypotheses falsified by experiment first (86,296-string
index replay, zero crashes); validated live by resuming enrichment past
the prior death zone with zero crash dumps.
- **705/677 — direction records**: 705 takeover verdict
(WAIT-FOR-EVIDENCE, trigger 1 met by this branch) and 677's
abstention-gate design (three-stage cheap-first cascade + honest reject
outcome; design only).

## Testing

- Full unit test suite green (`.